# SuperconductorTcPredictor

./: .gitignore  Bayesian_Opt_Weighted_Ensemble.ipynb  Best_Model_Runs_reduced_features.ipynb  Best_Runs.ipynb  Best_hyperparameter_and_weights - 01-03-2025.ipynb  CatBoost model test.ipynb  CombinedFeatureRun.ipynb  EDA.ipynb  EDA2.ipynb  Feature_Engineering_4.ipynb  Feature_Importance_with_weighted_model.ipynb  Feature_engineering_2.ipynb  Features_notes.ipynb  GradientBoosting.ipynb  Learning_Curve_Final_Blended_Model.ipynb  LightGBM_Bayesian_Optimization_50.ipynb  NB 2a - Author's_original_model.ipynb  NB 2b - Author's_model_25_cross_val_run.ipynb  NB 3d - CatBoost_model.ipynb  NB 4c - reduce_features_test.ipynb  NB 5d - New_Features_Bayesian_Run_150_100_feature_update.ipynb  NB 5e - New_Features_Bayesian_Run_300_200_feature_update.ipynb  NB 6 - Feature_engineering_notes.ipynb  NB 6c - Feature_Engineering_3.ipynb  NB 6d - Feature_Engineering_4.ipynb  NB 7a - Validation_and_learning_curves.ipynb  NB 7c - Author's_original_model_learning_curves.ipynb  NB 8b - Weighted_Averaging_on_Ensemble.ipynb  NB 9a - Best_Model_Runs_all_features.ipynb  NB 9b - Best_Model_Runs_reduced_features.ipynb  NB 9c - Learning_Curve_Final_Blended_Model.ipynb  NB 9d - test_best_model.ipynb  NeuralNet_model.ipynb  Notebook 1 - EDA.ipynb  Notebook 2a - Author's_original_model.ipynb  Notebook 2b - Author's_model_25_cross_val_run.ipynb  Notebook 2c - Comparing_author's_model_splits.ipynb  Notebook 3a - Baseline_XGBoost_model.ipynb  Notebook 3b - RFvsXGBoost_comparison.ipynb  (+27 more)
